src/main/java/io/github/jhipster/sample/web/rest/errors/EmailNotFoundException.java
package io.github.jhipster.sample.web.rest.errors;

public class EmailNotFoundException extends BadRequestAlertException {

    public EmailNotFoundException() {
        super("Email address not registered", "userManagement", "emailnotfound");
    }
}
